- Loggers to track incoming requests and outgoing responses.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ Spring.application.name=SafetyNet-Alerts
 server.port=8080
 
 logging.level.root=INFO
+logging.level.com.safetynet.SafetyNetAlerts=DEBUG
 
 
 
